--- a/src/5507-04-simon-slides-and-speaker-notes.Rmd
+++ b/src/5507-04-simon-slides-and-speaker-notes.Rmd
@@ -11,6 +11,21 @@ knit: (function(inputFile, encoding) {
 ```{r common-code, child="common-functions.Rmd"}
 ```
 
+```{r}
+file_prefix <- "5507-04-simon-categorical-variables"
+sas_file <- paste0(file_prefix, ".sas")
+tx <- readLines(sas_file)
+```
+
+```{r show-general-structure}
+tx %>%
+  str_subset("^\\* ") %>%
+  paste(collapse="\n\n") -> general_structure
+tx %<>% str_trim(side="right") %>% paste0(collapse="\n") %>% str_split("\n\n\n") %>% unlist
+output_page <- 0
+```
+
+
 
 ### Overview
 
@@ -39,34 +54,9 @@ We're going to look at a different data set, one with mostly categorical variabl
 
 </div>
 
-### SAS code: `r ti(tx, i=0)` <!--documentation header-->
-`r co(tx)`
-`r no(tx)`
 
-### SAS code: `r ti(tx, 1)` <!--where to find and store things-->
-`r co(tx)`
-`r no(tx)`
+`r add_chunks(0:4, tx)`
 
-### SAS code: `r ti(tx, 2)` <!--import-->
-`r co(tx)`
-`r no(tx)`
-
-### SAS code: `r ti(tx, 3)` <!--print-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 3)`
-`r ou(1)`
-`r no(tx, part=2)`
-
-### SAS code: `r ti(tx, 4)` <!--freq-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 4)`
-`r ou(2)`
-`r no(tx, part=2)`
-### SAS output: `r ti(tx, 4)`
-`r ou(3)`
-`r no(tx, part=3)`
 
 ### Break #1
 + What have you learned
@@ -74,12 +64,9 @@ We're going to look at a different data set, one with mostly categorical variabl
 + What's coming next
   + Convert string to numeric
 
-### SAS code: `r ti(tx, 5)`  <!--convert-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 5)`
-`r ou(4)`
-`r no(tx, part=2)`
+
+`r add_chunks(5:5, tx)`
+
 
 ### Break #2
 + What you have learned
@@ -87,12 +74,9 @@ We're going to look at a different data set, one with mostly categorical variabl
 + What's coming next
   + Labels for number codes
 
-### SAS code: `r ti(tx, 6)` <!--format-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 6)` 
-`r ou(5)`
-`r no(tx, part=2)`
+
+`r add_chunks(6:6, tx)`
+
 
 ### Break #3
 + What you have learned
@@ -100,26 +84,9 @@ We're going to look at a different data set, one with mostly categorical variabl
 + What's coming next
   + Drawing bar charts
 
-### SAS code: `r ti(tx, 7)` <!--bar chart 1-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 7)` 
-`r ou(6)`
-`r no(tx, part=2)`
 
-### SAS code: `r ti(tx, 8)` <!--bar chart 2-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 8)` 
-`r ou(7)`
-`r no(tx, part=2)`
+`r add_chunks(7:9, tx)`
 
-### SAS code: `r ti(tx, 9)` <!--bar chart 3-->
-`r co(tx, 9)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 9)` 
-`r ou(8)`
-`r no(tx, part=2)`
 
 ### Break #4
 + What you have learned
@@ -127,43 +94,10 @@ We're going to look at a different data set, one with mostly categorical variabl
 + What's coming next
   + Converting continuous to categorical
 
-### SAS code: `r ti(tx, 10)` <!--converting 1-->
-`r co(tx)`
-`r no(tx)`
 
-### SAS code: `r ti(tx, 11)` <!--converting 2-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 11)` 
-`r ou(9)`
-`r no(tx, part=2)`
-### SAS output: `r ti(tx, 11)` 
-`r ou(10)`
-`r no(tx, part=3)`
-### SAS output: `r ti(tx, 11)` 
-`r ou(11)`
-`r no(tx, part=4)`
 
-### SAS code: `r ti(tx, 12)` <!--converting 3-->
-`r co(tx)`
-`r no(tx)`
+`r add_chunks(10:14, tx)`
 
-### SAS code: `r ti(tx, 13)` <!--converting 4-->
-`r co(tx)`
-`r no(tx)`
-
-### SAS code: `r ti(tx, 14)` <!--converting 5-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 14)` 
-`r ou(12)`
-`r no(tx, part=2)`
-### SAS output: `r ti(tx, 14)` 
-`r ou(13)`
-`r no(tx, part=3)`
-### SAS output: `r ti(tx, 14)` 
-`r ou(14)`
-`r no(tx, part=4)`
 
 ### Break #5
 + What you have learned
@@ -171,12 +105,9 @@ We're going to look at a different data set, one with mostly categorical variabl
 + What's coming next
   + Modifying categorical variables
 
-### SAS code: `r ti(tx, 15)` <!--modifying-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 15)` 
-`r ou(15)`
-`r no(tx, part=2)`
+
+`r add_chunks(15:15, tx)`
+
 
 ### Break #6
 + What you have learned
@@ -184,33 +115,11 @@ We're going to look at a different data set, one with mostly categorical variabl
 + What's coming next
   + Crosstabulation
 
-### SAS code: `r ti(tx, 16)` <!--crosstabulation 1-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 16)`
-`r ou(16)`
-`r no(tx, part=2)`
 
-### SAS code: `r ti(tx, 17)` <!--crosstabulation 2-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 17)`
-`r ou(17)`
-`r no(tx, part=2)`
 
-### SAS code: `r ti(tx, 18)` <!--crosstabulation 3-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 18)`
-`r ou(18)`
-`r no(tx, part=2)`
+`r add_chunks(16:19, tx)`
 
-### SAS code: `r ti(tx, 19)` <!--crosstabulation 4-->
-`r co(tx)`
-`r no(tx, part=1)`
-### SAS output: `r ti(tx, 19)`
-`r ou(19)`
-`r no(tx, part=2)`
+
 
 ### Review
 + Frequency counts
